# skytable

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-reports-for-the-cli-client.md  bug-reports-for-the-database-server.md  feature_request.md  issues-with-documentation.md  other-issues.md  performance-concern.md  security-concerns.md
.github/workflows/: docker-image.yml  miri.yml  release.yml  test-pr.yml  (+1 more)
cli/: Cargo.toml
harness/: Cargo.toml  build.rs
harness/src/: audit.rs  bundle.rs  cli.rs  diagnostics.rs  linuxpkg.rs  main.rs  tests.rs
harness/src/test/: mod.rs
libsky/: Cargo.toml
server/: Cargo.toml  build.rs
server/help_text/: backup  compact  help  repair  restore
server/src/: main.rs
server/src/engine/: config.rs  error.rs  macros.rs  mod.rs
server/src/engine/core/: dcl.rs  exec.rs  mod.rs  space.rs  system_db.rs  util.rs
server/src/engine/core/dml/: del.rs  ins.rs  mod.rs
server/src/engine/core/index/: key.rs  mod.rs  row.rs
server/src/engine/core/model/: alt.rs  delta.rs  mod.rs
server/src/engine/core/tests/ddl_model/: alt.rs  crt.rs  layer.rs
server/src/engine/core/tests/ddl_space/: alter.rs  create.rs
server/src/engine/core/tests/dml/: delete.rs  insert.rs  select.rs  update.rs
server/src/engine/data/: cell.rs  dict.rs  lit.rs
server/src/engine/data/tests/: md_dict_tests.rs  mod.rs
server/src/engine/fractal/: context.rs  error.rs  mgr.rs  mod.rs  test_utils.rs
server/src/engine/idx/: mod.rs  stdhm.rs  tests.rs
server/src/engine/idx/meta/: mod.rs
server/src/engine/idx/mtchm/: imp.rs  iter.rs  meta.rs  mod.rs  patch.rs  tests.rs
server/src/engine/idx/stord/: iter.rs  mod.rs
server/src/engine/mem/: fixed_vec.rs  numbuf.rs  scanner.rs  unsafe_apis.rs  vinline.rs  word.rs
server/src/engine/mem/tests/: mod.rs  scanner.rs  word.rs
server/src/engine/net/: mod.rs
server/src/engine/net/protocol/: exchange.rs  handshake.rs  mod.rs  tests.rs
server/src/engine/ql/: tests.rs
server/src/engine/ql/ast/: mod.rs
server/src/engine/ql/ddl/: syn.rs
server/src/engine/ql/dml/: ins.rs  mod.rs  trunc.rs
server/src/engine/ql/lex/: mod.rs  raw.rs
server/src/engine/ql/tests/: dcl.rs  dml_tests.rs  lexer_tests.rs  misc.rs  schema_tests.rs  structure_syn.rs
server/src/engine/storage/: mod.rs
server/src/engine/storage/common/interface/: fs.rs  mod.rs  vfs.rs
server/src/engine/storage/common/sdss/impls/sdss_r1/: mod.rs  rw.rs  upgrades.rs
server/src/engine/storage/common/versions/: mod.rs
server/src/engine/storage/common_encoding/: r2.rs
server/src/engine/storage/common_encoding/r1/: map.rs  mod.rs  obj.rs  tests.rs
server/src/engine/storage/common_encoding/r1/impls/gns/: mod.rs  model.rs  space.rs
server/src/engine/storage/common_encoding/r1/impls/gns/tests/: full_chain.rs  io.rs
server/src/engine/storage/v1/raw/: rw.rs  spec.rs  sysdb.rs
server/src/engine/storage/v1/raw/batch_jrnl/: restore.rs
server/src/engine/storage/v1/raw/journal/: raw.rs
server/src/engine/storage/v2/: mod.rs
server/src/engine/storage/v2/impls/: backup_manifest.rs  gns_log.rs  mdl_journal.rs  mod.rs
server/src/engine/storage/v2/impls/tests/: gns.rs  mod.rs
server/src/engine/storage/v2/impls/tests/model_driver/: compaction_test.rs  generic.rs  mod.rs  skew.rs
server/src/engine/storage/v2/raw/: spec.rs
server/src/engine/storage/v2/raw/journal/: mod.rs  tests.rs
server/src/engine/storage/v2/raw/journal/raw/: mod.rs
server/src/engine/storage/v2/raw/journal/raw/tests/: compaction.rs  journal_ops.rs  mod.rs  recovery.rs
server/src/engine/sync/: queue.rs  smart.rs
server/src/engine/tests/: cfg.rs  mod.rs
server/src/engine/tests/client/: mod.rs
server/src/engine/tests/client_misc/sec/: mod.rs
server/src/engine/tests/safety/: mod.rs
server/src/engine/txn/gns/: model.rs
server/src/util/: macros.rs  os.rs  test_utils.rs
server/src/util/os/: flock.rs
sky-bench/: Cargo.toml  README.md
sky-bench/help_text/: help
sky-bench/src/: args.rs  bench.rs  error.rs  macros.rs  main.rs  setup.rs  stats.rs
sky-bench/src/legacy/: mod.rs
sky-bench/src/legacy/runtime/: fury.rs  mod.rs  rookie.rs
sky-bench/src/workload/: driver.rs  error.rs  mod.rs  util.rs
sky-bench/src/workload/workloads/: mod.rs  uniform_std_v1.rs  uniform_v1_std.rs
sky-bench/src/workloads/: driver.rs  mod.rs
sky-macros/: Cargo.toml
sky-macros/src/: dbtest.rs  lib.rs  util.rs
(+12 files in other folders)
