[package]
name = "harness"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
libsky = { path = "../libsky" }
# external deps
env_logger = "0.11.4"
log = "0.4.22"
zip = { version = "2.1.5", features = ["deflate"] }
powershell_script = "1.1.0"
openssl = { version = "0.10.66", features = ["vendored"] }
