[package]
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2021"
name = "skyd"
version = "0.8.3"
description = "Skytable is a modern NoSQL database powered by BlueQL that aims to deliver performance, scalability and flexibility with data"
license = "AGPL-3.0"
build = "build.rs"

[build-dependencies]
libsky = { path = "../libsky" }

[dependencies]
# internal deps
libsky = { path = "../libsky" }
sky_macros = { path = "../sky-macros" }
rcrypt = "0.4.0"
# external deps
bytes = "1.6.1"
env_logger = "0.11.4"
log = "0.4.22"
openssl = { version = "0.10.66", features = ["vendored"] }
crossbeam-epoch = { version = "0.9.18" }
parking_lot = "0.12.3"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full"] }
tokio-openssl = "0.6.4"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
crc = "3.2.1"
serde_yaml = "0.9.33"
chrono = "0.4.38"

[target.'cfg(all(not(target_env = "msvc"), not(miri)))'.dependencies]
# external deps
jemallocator = "0.5.4"
[target.'cfg(target_os = "windows")'.dependencies]
# external deps
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_System_SystemInformation",
] }

[target.'cfg(unix)'.dependencies]
# external deps
libc = "0.2.155"

[dev-dependencies]
# external deps
rand = "0.8.5"
tokio = { version = "1.39.1", features = ["test-util"] }
skytable = { git = "https://github.com/skytable/client-rust.git", branch = "devel" }

[features]
nightly = []
persist-suite = []

[package.metadata.deb]
name = "skytable"
maintainer = "Sayan Nandan <nandansayan@outlook.com>"
copyright = "2024, Sayan Nandan <nandansayan@outlook.com>"
license-file = ["../LICENSE", "0"]
maintainer-scripts = "../pkg/debian/"
extended-description-file = "pkg/debian/description.txt"
depends = "$auto"
section = "database"
priority = "optional"
assets = [
  [
    "target/release/skyd",
    "/usr/bin/skyd",
    "755",
  ],
  [
    "target/release/skysh",
    "/usr/bin/skysh",
    "755",
  ],
  [
    "target/release/sky-bench",
    "/usr/bin/sky-bench",
    "755",
  ],
  [
    "../examples/config-files/dpkg/config.yaml",
    "/var/lib/skytable/config.yaml.tmp",
    "644",
  ],
  [
    "../pkg/common/skyd.service",
    "/etc/systemd/system/skyd.service",
    "644",
  ],
]
