[package]
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
edition = "2021"
name = "sky-bench"
version = "0.8.3"
description = "The Skytable benchmark tool can be used to benchmark Skytable installations"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
libsky = { path = "../libsky" }

[dependencies]
# internal deps
skytable = { git = "https://github.com/skytable/client-rust.git", branch = "devel" }
libsky = { path = "../libsky" }
# external deps
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"
env_logger = "0.11.4"
log = "0.4.22"
tokio = { version = "1.39.1", features = ["full"] }
